test/corpus/arithmetic-with-parentheses.txt
===
Arithmetic with parentheses
===

int main() {
    int y = (5 * 2) - 3;
    return y;
}

---

(source_file
	(statement
		(declaration
			(type)
			(identifier)
			(expression
				(binary_expression
					(expression
						(expression
							(binary_expression
								(expression (intconst (decnum)))
								(expression (intconst (decnum)))
							)
						)
					)
					(expression (intconst (decnum)))
				)
			)
		)
	)
	(statement
		(expression (identifier))
	)
)
