test/corpus/dead-code-after-return.txt
===
Dead code after return
===

int main() {
    return 0;
    int x = 5;
}

---

(source_file
	(program
    	(statement
	        (expression (intconst (decnum)))
		)
		(statement
			(declaration
				(type)
				(identifier)
				(expression (intconst (decnum)))
			)
		)
	)
)
