test/corpus/many_assignments.txt
===
Many assignments
===

int main() {
  int z = 1;
  int x = 100 / 0;
  int y = 5 % x;
  return 0;
}

---

(source_file
	(program
    	(statements
	        (statement
	        	(decl
			        (type)
	            	(identifier)
              		(expression (intconst (decnum)))
				)
			)
	    	(statement
		    	(decl
		        	(type)
		        	(identifier)
		        	(expression
			        	(expression (intconst (decnum)))
			        	(expression (intconst (decnum)))
					)
				)
			)
	    	(statement
		    	(decl
		        	(type)
		        	(identifier)
		        	(expression
			        	(expression (intconst (decnum)))
			        	(expression (identifier))
					)
				)
			)
	    	(statement
		    	(expression (intconst (decnum)))
			)
		)
	)
)
